# gdt_helper

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gdt_halper.py  gdt_helper.py  mypy.ini  pyproject.toml
clang_parser/: CLexer.interp  CLexer.py  CListener.py  CParser.py
example/: README.md
example/linux/: open_ssl.h
example/osx/: hoge.h  mac_system.h  mac_system.h.out  test.h  test.h.out
example/windows/: ldr_load_libraries.h  test.h
